--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -1,33 +1,35 @@
-{% extends 'student_explorer/index.html' %}
+{% extends 'seumich/advisor.html' %}
 
 {% block head %}
-{% load staticfiles %}
-  <script src='{% static 'seumich/sort_table.js' %}'></script>
+    {% load staticfiles %}
+    <script src='{% static ' seumich/sort_table.js' %}'></script>
 {% endblock %}
 
-{% block content %}
+{% block advisor_list %}
 
-<h2 class="sub-header">All Advisors</h2>
-<div class="table-responsive">
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col" class="hide-small"><a href="#" onClick="return false;">Name</a></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for advisor in advisors %}
-      <tr>
-        <th scope="row" class="bold">
-          <a href="/advisors/{{ advisor.username }}/">{{ advisor.first_name }}
-                {{ advisor.last_name }}</a>
-        </th>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+    <h2 class="sub-header">All Advisors</h2>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col" class="hide-small">
+                        <a href="#" onClick="return false;">Name</a>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for advisor in advisors %}
+                    <tr>
+                        <th scope="row" class="bold">
+                            <a href="/advisors/{{ advisor.username }}/">{{ advisor.first_name }}
+                                {{ advisor.last_name }}</a>
+                        </th>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-<dig-data-fetch-progress progress="{{progress}}" />
+    <dig-data-fetch-progress progress="{{progress}}"/>
 
 {% endblock %}
