--- a/seumich/templates/seumich/student.html
+++ b/seumich/templates/seumich/student.html
@@ -1,25 +1,9 @@
 {% extends 'student_explorer/index.html' %}
 
-{% block head %}
-{% load staticfiles %}
-  <script src='{% static 'seumich/student.js' %}'></script>
-{% endblock %}
+{% block content %}
 
-{% block content %} {% load filters %}
-
-<div>
-    <div class="student-detail-main-menu">
-        <div class="student-detail-main-menu-top">
-            <h1 class="student-detail-student-name">{{student.first_name}} {{student.last_name}}</h1>
-            <p class="student-detail-student-id">Student ID: {{ student.univ_id }}</p>
-            <p class="student-detail-student-email"><a href="mailto:{{student.email_address}}" class="student-detail-student-email-link">{{student.email_address}}</a></p>
-        </div>
-    </div>
-
-    <div class="student-detail-main">
-        <div>{% include 'seumich/student_detail.html' %}</div>
-    </div>
-
-</div>
+    {% block student_detail %}{% endblock %}
+    {% block student_list %}{% endblock %}
+    {% block student_class_site_detail %}{% endblock %}
 
 {% endblock %}
