Fix container-fluid bug
Only divs with class 'container-fluid' that have 'assignment-table' div as parent should have padding zero on screen size less than 992px. This will not affect other divs with class 'container-fluid'

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -452,7 +452,7 @@ a.class-site-status-link span {
   .assignment-table {
     margin-left: 0px;
   }
-  .container-fluid {
+  .assignment-table > .container-fluid {
     padding: 0;
   }
 }
