Use margin to remove need for javascript to provide width or to use vw
I have reset position, left, and width values to default and use margin property to deal with mobile layout. This is done to avoid setting width through js or using vw.

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -393,11 +393,10 @@ a.class-site-status-link span {
       display: none;
   }
   .student-detail-main-menu, .student-detail-left-menu {
-      position: relative;
-      width: 100vw;
-      margin-top: -20px;
-      left: -15px;
-      margin-bottom: -10px;
+      position: static;
+      left: auto;
+      width: auto;
+      margin: -20px -15px 0;
   }
   .sub-header-backlink {
       margin-top: 0;
