Use block content instead of custom blocks
Instead of defining multiple custom blocks in student.html and advisor.html, use content block.

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -239,6 +239,7 @@ th[scope="row"] {
 
 .student-detail-summary-content {
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 .student-info {
@@ -421,6 +422,7 @@ a.class-site-status-link span {
   }
   .student-detail-summary-content {
       margin-left: 0px;
+      margin-right: 0px;
   }
   .student-info {
     margin-bottom: 10px;
