--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -1,6 +1,6 @@
 {% extends 'seumich/advisor.html' %}
 
-{% block advisor_detail %}
+{% block content %}
     {% if advisor %}
         {% include 'seumich/student_list_partial.html' %}
     {% else %}
