--- a/seumich/templates/seumich/student.html
+++ b/seumich/templates/seumich/student.html
@@ -1,9 +1,3 @@
 {% extends 'student_explorer/index.html' %}
 
-{% block content %}
-
-    {% block student_detail %}{% endblock %}
-    {% block student_list %}{% endblock %}
-    {% block student_class_site_detail %}{% endblock %}
-
-{% endblock %}
+{% block content %}{% endblock %}
