--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -5,7 +5,7 @@
     <script src='{% static "seumich/student.js" %}'></script>
     <script src='{% static "seumich/assignment_list_table.js" %}'></script>
 {% endblock %}
-{% block student_class_site_detail %}
+{% block content %}
 
     <div>
         <div class="student-detail-left-menu" id="student-detail-menu">
