--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -6,7 +6,7 @@
     <script src='{% static "seumich/student.js" %}'></script>
 {% endblock %}
 
-{% block student_detail %}
+{% block content %}
 
     <div>
         <div class="student-detail-main-menu">
