--- a/seumich/templates/seumich/advisor.html
+++ b/seumich/templates/seumich/advisor.html
@@ -1,8 +1,3 @@
 {% extends 'student_explorer/index.html' %}
 
-{% block content %}
-
-    {% block advisor_detail %}{% endblock %}
-    {% block advisor_list %}{% endblock %}
-
-{% endblock %}
+{% block content %}{% endblock %}
