--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -5,7 +5,7 @@
     <script src='{% static ' seumich/sort_table.js' %}'></script>
 {% endblock %}
 
-{% block advisor_list %}
+{% block content %}
 
     <h2 class="sub-header">All Advisors</h2>
     <div class="table-responsive">
