--- a/advisinggroups/templates/advisinggroups/index.html
+++ b/advisinggroups/templates/advisinggroups/index.html
@@ -1,52 +1,42 @@
-<!doctype html>
-<html lang="en" class="no-js">
+{% extends 'student_explorer/index.html' %}
+{% load static from staticfiles %}
 
-<head>
-    {% load static from staticfiles %}{% static "" as baseUrl %}
-    <meta charset="utf-8">
-    <title>Student Explorer</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'components-font-awesome/css/font-awesome.css' %}">
-    <script src="{% static 'jquery/dist/jquery.js' %}"></script>
-    <script src="{% static 'bootstrap/dist/js/bootstrap.js' %}"></script>
-    <script src="{% static 'advisinggroups/index.js' %}"></script>
-    {% block head %}{% endblock %}
-</head>
+{% block head %}
+    {% load staticfiles %}
+    <script src='{% static "advisinggroups/index.js" %}'></script>
+{% endblock %}
 
-<body>
+{% block content %}
     <div class="container-fluid">
         <div class="row-fluid">
-            <div class="col-md-5 col-md-offset-3">
-                <div class="page-header">
-                    <h1>Student Explorer Tool</h1>
-                </div>
-                <form method="post" enctype="multipart/form-data">{% csrf_token %}
-                    <div class="well">
-                        <legend>Import CSV</legend>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="id_input_file" value="" placeholder="Please upload a file" />
-                                <input type="file" id="open-dialog" name="input-file" />
-                                <span class="input-group-addon"><a href="#" id="upload-file" title="Browse" data-toggle="tooltip" data-placement="bottom"><span class="glyphicon glyphicon-upload"></span></a>
-                                </span>
-                            </div>
+            <div class="page-header">
+                <h1 class="sub-header">Student Explorer Tool</h1>
+            </div>
+            <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                <div class="well">
+                    <legend>Import CSV</legend>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="id_input_file" value="" placeholder="Please upload a file" readonly/>
+                            <input type="file" id="open-dialog" name="input-file"/>
+                            <span class="input-group-addon">
+                                <a href="#" id="upload-file" title="Browse" data-toggle="tooltip" data-placement="bottom">
+                                    <span class="glyphicon glyphicon-upload"></span>
+                                </a>
+                            </span>
                         </div>
-                        <button type="submit" class="btn btn-success">Import</button>
-                        <img src='{% static 'advisinggroups/images/loading.gif' %}' alt='Searching' />
-                        <button type="button" class="btn btn-danger" id="clear_text">Clear</button>
                     </div>
-                </form>
-                <div class="alert alert-success" id="alert-success">
-                    Import was successfully completed!
+                    <button type="submit" class="btn btn-success">Import</button>
+                    <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
+                    <button type="button" class="btn btn-danger" id="clear_text">Clear</button>
                 </div>
-                <div class="alert alert-danger" id="alert-danger">
-                    There was an error in import!
-                </div>
+            </form>
+            <div class="alert alert-success" id="alert-success">
+                Import was successfully completed!
+            </div>
+            <div class="alert alert-danger" id="alert-danger">
+                There was an error in import!
             </div>
         </div>
     </div>
-</body>
-
-</html>
+{% endblock %}
