--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -8,8 +8,7 @@
         <title>Student Explorer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-        <link rel="icon" href="{% static 'images/icon.png' %}" type="image/x-icon">
+        <link rel="shortcut icon" href="/static/images/favicon.ico">
         <link rel="apple-touch-icon" sizes="152x152" href="{% static 'images/icon-52.png' %}">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
