--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -35,7 +35,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="main-color-white main-navbar-brand navbar-brand">Student Explorer</a>
+                      <img id="student-explorer-logo" src="/static/images/se-logo.svg" alt="student explorer logo">
+                      <a class="main-color-white main-navbar-brand navbar-brand">Student Explorer</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
