Improving confirmation section, Implement Caching, Started 'Confirm' functionality
Use pandas to read excel file. Use dropdown instead of up and down buttons. Implemented a basic flow for 'Confirm' functionality. Future -> Implement selected mapping to store excel data in DB

--- a/advisinggroups/templates/advisinggroups/index.html
+++ b/advisinggroups/templates/advisinggroups/index.html
@@ -50,63 +50,55 @@
             <thead>
                 <tr>
                     <th>Excel Fields</th>
+                    <th>Example Data</th>
                     <th>Table Name</th>
                     <th>Column Name</th>
-                    <th>Change Mapping</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td id="col1row1"></td>
+                    <td id="col1row1">
+                        <div class="form-group">
+                            <select class="form-control" id="options1">
+                            </select>
+                        </div>
+                    </td>
+                    <td id="col2row1"></td>
                     <td>advisinggroups_student</td>
                     <td>univ_id</td>
-                    <td>
-                        <button type="button" class="btn btn-warning btn-sm up">
-                            <span class="glyphicon glyphicon-arrow-up"></span>
-                        </button>
-                        <button type="button" class="btn btn-warning btn-sm down">
-                            <span class="glyphicon glyphicon-arrow-down"></span>
-                        </button>
-                    </td>
                 </tr>
                 <tr>
-                    <td id="col1row2"></td>
+                    <td id="col1row2">
+                        <div class="form-group">
+                            <select class="form-control" id="options2">
+                            </select>
+                        </div>
+                    </td>
+                    <td id="col2row2"></td>
                     <td>advisinggroups_student</td>
                     <td>username</td>
-                    <td>
-                        <button type="button" class="btn btn-warning btn-sm up">
-                            <span class="glyphicon glyphicon-arrow-up"></span>
-                        </button>
-                        <button type="button" class="btn btn-warning btn-sm down">
-                            <span class="glyphicon glyphicon-arrow-down"></span>
-                        </button>
-                    </td>
                 </tr>
                 <tr>
-                    <td id="col1row3"></td>
+                    <td id="col1row3">
+                        <div class="form-group">
+                            <select class="form-control" id="options3">
+                            </select>
+                        </div>
+                    </td>
+                    <td id="col2row3"></td>
                     <td>advisinggroups_advisor</td>
                     <td>username</td>
-                    <td>
-                        <button type="button" class="btn btn-warning btn-sm up">
-                            <span class="glyphicon glyphicon-arrow-up"></span>
-                        </button>
-                        <button type="button" class="btn btn-warning btn-sm down">
-                            <span class="glyphicon glyphicon-arrow-down"></span>
-                        </button>
-                    </td>
                 </tr>
                 <tr>
-                    <td id="col1row4"></td>
+                    <td id="col1row4">
+                        <div class="form-group">
+                            <select class="form-control" id="options4">
+                            </select>
+                        </div>
+                    </td>
+                    <td id="col2row4"></td>
                     <td>advisinggroups_group</td>
                     <td>description</td>
-                    <td>
-                        <button type="button" class="btn btn-warning btn-sm up">
-                            <span class="glyphicon glyphicon-arrow-up"></span>
-                        </button>
-                        <button type="button" class="btn btn-warning btn-sm down">
-                            <span class="glyphicon glyphicon-arrow-down"></span>
-                        </button>
-                    </td>
                 </tr>
             </tbody>
         </table>
