--- a/advisinggroups/templates/advisinggroups/index.html
+++ b/advisinggroups/templates/advisinggroups/index.html
@@ -4,6 +4,7 @@
 {% block head %}
     {% load staticfiles %}
     <script src='{% static "advisinggroups/index.js" %}'></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/style.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -26,12 +27,6 @@
                             </span>
                         </div>
                     </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" name="field-names" value="" checked>
-                            First line contains field names
-                        </label>
-                    </div>
                     <button type="submit" class="btn btn-success">Import</button>
                     <button type="button" class="btn btn-danger" id="clear_text">Clear</button>
                 </div>
@@ -43,10 +38,10 @@
                 There was an error in import!
             </div>
         </div>
-        <p class="text-primary">Processing...
+        <p class="text-primary" id="processing-text">Processing...
             <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
         </p>
-        <table class="table table-striped">
+        <table class="table table-striped table-responsive">
             <thead>
                 <tr>
                     <th>Excel Fields</th>
@@ -64,8 +59,8 @@
                         </div>
                     </td>
                     <td id="col2row1"></td>
-                    <td>advisinggroups_student</td>
-                    <td>univ_id</td>
+                    <td id="col3row1">advisinggroups_student</td>
+                    <td id="col4row1">univ_id</td>
                 </tr>
                 <tr>
                     <td id="col1row2">
@@ -75,8 +70,8 @@
                         </div>
                     </td>
                     <td id="col2row2"></td>
-                    <td>advisinggroups_student</td>
-                    <td>username</td>
+                    <td id="col3row2">advisinggroups_student</td>
+                    <td id="col4row2">username</td>
                 </tr>
                 <tr>
                     <td id="col1row3">
@@ -86,8 +81,8 @@
                         </div>
                     </td>
                     <td id="col2row3"></td>
-                    <td>advisinggroups_advisor</td>
-                    <td>username</td>
+                    <td id="col3row3">advisinggroups_advisor</td>
+                    <td id="col4row3">username</td>
                 </tr>
                 <tr>
                     <td id="col1row4">
@@ -97,10 +92,13 @@
                         </div>
                     </td>
                     <td id="col2row4"></td>
-                    <td>advisinggroups_group</td>
-                    <td>description</td>
+                    <td id="col3row4">advisinggroups_group</td>
+                    <td id="col4row4">description</td>
                 </tr>
             </tbody>
         </table>
+        <p class="text-primary" id="importing-text">Importing...
+            <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
+        </p>
     </div>
 {% endblock %}
