--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -61,4 +61,53 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <div class="text-center">
+        <ul class="pagination">
+            <li class="page-item">
+                {% if students.has_previous %}
+                    {% if query_user %}
+                        <a class="page-link" href='?search={{query_user}}&amp;page={{students.previous_page_number}}' aria-label="Previous">Previous</a>
+                    {% else %}
+                        <a class="page-link" href='?page={{students.previous_page_number}}' aria-label="Previous">Previous</a>
+                    {% endif %}
+                {% endif %}
+            </li>
+            {% for page_num in loop_times %}
+                {% if page_num == students.number %}
+                    {% if query_user %}
+                        <li class="page-item active">
+                            <a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item active">
+                            <a class="page-link" href='?page={{page_num}}'>{{page_num}}</a>
+                        </li>
+                    {% endif %}
+                {% else %}
+                    {% if page_num <= students.paginator.num_pages %}
+                        {% if query_user %}
+                            <li class="page-item">
+                                <a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item">
+                                <a class="page-link" href='?page={{page_num}}'>{{page_num}}</a>
+                            </li>
+                        {% endif %}
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+            <li class="page-item">
+                {% if students.has_next %}
+                    {% if query_user %}
+                        <a class="page-link" href='?search={{query_user}}&amp;page={{students.next_page_number}}' aria-label="Next">Next</a>
+                    {% else %}
+                        <a class="page-link" href='?page={{students.next_page_number}}' aria-label="Next">Next</a>
+                    {% endif %}
+                {% endif %}
+            </li>
+        </ul>
+    </div>
+
 </div>
