--- a/advisinggroups/static/styles/style.css
+++ b/advisinggroups/static/styles/style.css
@@ -1,3 +1,3 @@
-#open-dialog, #alert-success, #alert-danger, #processing-text, #importing-text, .table {
+#processing-text, #importing-text, #confirm-button, #undo-button, #back-button, .alert, .table {
     display: none;
 }
