--- a/advisinggroups/templates/advisinggroups/index.html
+++ b/advisinggroups/templates/advisinggroups/index.html
@@ -15,90 +15,86 @@
             </div>
             <form method="post" enctype="multipart/form-data">{% csrf_token %}
                 <div class="well">
-                    <legend>Import CSV</legend>
+                    <legend>Import Excel</legend>
                     <div class="form-group">
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="id_input_file" value="" placeholder="Please upload a file" readonly/>
-                            <input type="file" id="open-dialog" name="input-file"/>
-                            <span class="input-group-addon">
-                                <a href="#" id="upload-file" title="Browse" data-toggle="tooltip" data-placement="bottom">
-                                    <span class="glyphicon glyphicon-upload"></span>
-                                </a>
-                            </span>
-                        </div>
+                        <input type="file" name="input-file"/>
                     </div>
-                    <button type="submit" class="btn btn-success">Import</button>
-                    <button type="button" class="btn btn-danger" id="clear_text">Clear</button>
+                    <button type="submit" class="btn btn-success btn-md">Import</button>
                 </div>
             </form>
-            <div class="alert alert-success" id="alert-success">
+            <div class="alert alert-success" id="alert-import-success">
                 Import was successfully completed!
             </div>
-            <div class="alert alert-danger" id="alert-danger">
+            <div class="alert alert-danger" id="alert-import-danger">
                 There was an error in import!
             </div>
+            <p class="text-primary" id="processing-text">Processing...
+                <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
+            </p>
+            <table class="table table-striped table-responsive">
+                <thead>
+                    <tr>
+                        <th>Excel Fields</th>
+                        <th>Example Data</th>
+                        <th>Table Name</th>
+                        <th>Column Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td id="col1row1">
+                            <div class="form-group">
+                                <select class="form-control" id="options1"></select>
+                            </div>
+                        </td>
+                        <td id="col2row1"></td>
+                        <td id="col3row1">advisinggroups_student</td>
+                        <td id="col4row1">univ_id</td>
+                    </tr>
+                    <tr>
+                        <td id="col1row2">
+                            <div class="form-group">
+                                <select class="form-control" id="options2"></select>
+                            </div>
+                        </td>
+                        <td id="col2row2"></td>
+                        <td id="col3row2">advisinggroups_student</td>
+                        <td id="col4row2">username</td>
+                    </tr>
+                    <tr>
+                        <td id="col1row3">
+                            <div class="form-group">
+                                <select class="form-control" id="options3"></select>
+                            </div>
+                        </td>
+                        <td id="col2row3"></td>
+                        <td id="col3row3">advisinggroups_advisor</td>
+                        <td id="col4row3">username</td>
+                    </tr>
+                    <tr>
+                        <td id="col1row4">
+                            <div class="form-group">
+                                <select class="form-control" id="options4"></select>
+                            </div>
+                        </td>
+                        <td id="col2row4"></td>
+                        <td id="col3row4">advisinggroups_group</td>
+                        <td id="col4row4">description</td>
+                    </tr>
+                </tbody>
+            </table>
+            <button type="button" class="btn btn-info pull-right" id="confirm-button">Confirm</button>
+            <button type="button" class="btn btn-warning pull-left" id="back-button">Back</button>
+            <button type="button" class="btn btn-danger pull-right" id="undo-button">Undo</button>
+            <div class="alert alert-success" id="alert-undo-success">
+                Import was successfully undone!
+            </div>
+            <div class="alert alert-danger" id="alert-undo-danger">
+                Import could not be undone!
+            </div>
+            <p class="text-primary" id="importing-text">Importing...
+                <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
+            </p>
         </div>
-        <p class="text-primary" id="processing-text">Processing...
-            <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
-        </p>
-        <table class="table table-striped table-responsive">
-            <thead>
-                <tr>
-                    <th>Excel Fields</th>
-                    <th>Example Data</th>
-                    <th>Table Name</th>
-                    <th>Column Name</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td id="col1row1">
-                        <div class="form-group">
-                            <select class="form-control" id="options1">
-                            </select>
-                        </div>
-                    </td>
-                    <td id="col2row1"></td>
-                    <td id="col3row1">advisinggroups_student</td>
-                    <td id="col4row1">univ_id</td>
-                </tr>
-                <tr>
-                    <td id="col1row2">
-                        <div class="form-group">
-                            <select class="form-control" id="options2">
-                            </select>
-                        </div>
-                    </td>
-                    <td id="col2row2"></td>
-                    <td id="col3row2">advisinggroups_student</td>
-                    <td id="col4row2">username</td>
-                </tr>
-                <tr>
-                    <td id="col1row3">
-                        <div class="form-group">
-                            <select class="form-control" id="options3">
-                            </select>
-                        </div>
-                    </td>
-                    <td id="col2row3"></td>
-                    <td id="col3row3">advisinggroups_advisor</td>
-                    <td id="col4row3">username</td>
-                </tr>
-                <tr>
-                    <td id="col1row4">
-                        <div class="form-group">
-                            <select class="form-control" id="options4">
-                            </select>
-                        </div>
-                    </td>
-                    <td id="col2row4"></td>
-                    <td id="col3row4">advisinggroups_group</td>
-                    <td id="col4row4">description</td>
-                </tr>
-            </tbody>
-        </table>
-        <p class="text-primary" id="importing-text">Importing...
-            <img src='{% static "advisinggroups/images/loading.gif" %}' alt='Searching'/>
-        </p>
     </div>
 {% endblock %}
