--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -123,7 +123,7 @@
         <div class="footer navbar-fixed-bottom">
             <div class="container">
                 <p class="main-color-white">Student Explorer (2.1.0)
-                    <span class="footer-block">Copyright &copy; 2015</span>
+                    <span class="footer-block">Copyright &copy; 2015 - 2016</span>
                     <span class="footer-block">The Regents of the University of Michigan</span>
                 </p>
             </div>
