Add Graph descriptions
Add descriptions to Cumulative Score and Weekly Activity graphs.

--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -78,6 +78,9 @@
 
                 <div class="row charts no-margin">
                     <h4>Cumulative Score</h4>
+                    <p>
+                        <small class="note">This graph compares the student's cumulative score to the class' average cumulative score during each week of the semester.</small>
+                    </p>
                     <div id="chart1" style="height: 100%;">
                         <svg></svg>
                     </div>
@@ -109,6 +112,9 @@
                     </script>
 
                     <h4>Weekly Activity</h4>
+                    <p>
+                        <small class="note">This graph shows the percentile ranking of the student's page views (Canvas) or log-ins (CTools).</small>
+                    </p>
                     <div id="chart2" style="height: 100%;">
                         <svg></svg>
                     </div>
