Align graph descriptions
Align graph notes with the heading.

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -136,6 +136,11 @@ h4{
     margin-left:10px;
 }
 
+.note {
+    display: inline-block;
+    margin-left: 10px;
+}
+
 th[scope="row"] {
   font-weight:normal;
 }
