Update Assignment list note

--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -144,7 +144,7 @@
 
                 <div class="row assignments no-margin">
                     <h4>Assignments</h4>
-                    <small class="note">Note that this list may not reflect all assignments included in current score calculation. For a complete list, please refer to the source system.</small>
+                    <small class="note">This list may not reflect all assignments included in current score calculation. For a complete list, please refer to the source system.</small>
                     <!-- <a href="api/class_sites/{{classSite.class_site.code}}/student/{{student.username}}/assignments/download/"><button>Download Assignment</button></a> -->
                     <hr class="main-no-margin-top">
                     {% if not assignments %}
