--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -41,7 +41,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="/students/" data-toggle="collapse" data-target="#navbar.in">Students</a>
+                            <a href="/" data-toggle="collapse" data-target="#navbar.in">My Students</a>
                         </li>
                         <li>
                             <a href="/advisors/" data-toggle="collapse" data-target="#navbar.in">Advisors</a>
