Align headers in lists
Left align headers in advisor and student list to make the appearance more aesthetic.

--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <h2 class="sub-header">All Advisors</h2>
+    <h2 class="sub-header list-header">All Advisors</h2>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
