--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -4,7 +4,7 @@
 <h1 class="sub-header">{{ studentListHeader }}</h1>
 {% if students %}
     <hr class="main-no-margin-top"/>
-    <h2>Students</h2>
+    <h2 class="list-header">Students</h2>
 {% endif %}
 
 <div class="table-responsive">
