--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -106,6 +106,10 @@ h2{
     font-size:24px;
 }
 
+.list-header {
+  padding-left: 0px;
+}
+
 h3.student-course-list{
   font-size: 18px;
   margin:0px;
