--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -141,6 +141,10 @@ h4{
     margin-left: 10px;
 }
 
+.center-align {
+    text-align: center;
+}
+
 th[scope="row"] {
   font-weight:normal;
 }
@@ -181,9 +185,8 @@ th[scope="row"] {
 }
 
 .student-detail-main-menu {
-    width: 100%;
-    position: absolute;;
-    left: 0;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .student-detail-main-menu-top {
@@ -235,16 +238,11 @@ th[scope="row"] {
 
 .student-detail-summary {
     width: 75%;
-    position: absolute;
-    left: 0;
     margin-left: 25%;
 }
 
 .student-detail-main {
     width: 75%;
-    position: absolute;
-    left: 0;
-    margin-top: 125px;
     padding-left: 20px;
 }
 
@@ -285,6 +283,23 @@ th[scope="row"] {
     display: inline-block;
 }
 
+.feedback img {
+  width: 25px;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.feedback {
+  position: absolute;
+  bottom: 55px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+body {
+  position: relative;
+}
 /* Custom page footer */
 .footer {
   padding-top: 19px;
