--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -107,7 +107,7 @@
         </div>
 
         <div class='feedback center-align visible-sm visible-xs'>
-          <button type="button" class="btn btn-secondary"><a href="mailto:student-explorer-help@umich.edu" target="_top"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
+          <button type="button" class="btn btn-sm btn-secondary"><a href="mailto:student-explorer-help@umich.edu" target="_top"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
         </div>
 
         <div class="footer navbar-fixed-bottom">
