Add "About" page

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -112,7 +112,7 @@
 
         <div class="footer navbar-fixed-bottom">
             <div class="container">
-                <p class="main-color-white">Student Explorer (2.1.0)
+                <p class="main-color-white">Student Explorer (<a href="/about" style="text-decoration: none; color: inherit;">2.1.0</a>)
                     <span class="footer-block">Copyright &copy; 2015 - 2016</span>
                     <span class="footer-block">The Regents of the University of Michigan</span>
                 </p>
