Add padding between pagination and feedback link
Add padding below pagination and advisor list to allow for more space between end of list/table/pagination and feedback link.

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -149,6 +149,10 @@ h4{
     text-align: center;
 }
 
+.end-padding {
+    padding-bottom: 50px;
+}
+
 th[scope="row"] {
   font-weight:normal;
 }
@@ -482,7 +486,7 @@ a.class-site-status-link span {
 }
 
 @media screen and (max-width: 736px) {
-  body {
+  body, .end-padding {
     padding-bottom: 0;
   }
 
