--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -9,7 +9,7 @@
 
     <div class="container content">
         <h2 class="sub-header list-header">All Advisors</h2>
-        <div class="table-responsive">
+        <div class="table-responsive end-padding">
             <table class="table table-striped">
                 <thead>
                     <tr>
